salesforce-app/src/objects/Taro_Inventory__c.object
<CustomObject>
    <description>An inventory contains information about a product in a particular warehouse, such as inventory levels.</description>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product for this inventory.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Taro Inventory</relationshipLabel>
        <relationshipName>Taro_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Available__c</fullName>
        <description>The quantity physically in stock that has not already been committed on a Confirmed outbound Order.</description>
        <formula>Qty_On_hand__c  -  Qty_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The quantity physically in stock that has not already been committed on a Confirmed outbound Order.</inlineHelpText>
        <label>Qty Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <description>The quantity physically in stock that are allocated to confirmed outbound Orders.</description>
        <inlineHelpText>The quantity physically in stock that are allocated to confirmed outbound Orders.</inlineHelpText>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_On_Order__c</fullName>
        <description>The quantity not yet physically in stock, but that is expected on a confirmed inbound Order.</description>
        <inlineHelpText>The quantity not yet physically in stock, but that is expected on a confirmed inbound Order.</inlineHelpText>
        <label>Qty On-Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_On_hand__c</fullName>
        <description>The quantity physically in stock.</description>
        <inlineHelpText>The quantity physically in stock.</inlineHelpText>
        <label>Qty On-hand</label>
        <summarizedField>Taro_Inventory_Movement__c.Adjustment_Qty__c</summarizedField>
        <summaryForeignKey>Taro_Inventory_Movement__c.Inventory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Taro_Warehouse__c</fullName>
        <description>The warehouse the product is stored in.</description>
        <label>Taro Warehouse</label>
        <referenceTo>Taro_Warehouse__c</referenceTo>
        <relationshipLabel>Taro Inventories</relationshipLabel>
        <relationshipName>Taro_Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Taro Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taro Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>